--- a/docs/数据结构与算法(4)--串.md
+++ b/docs/数据结构与算法(4)--串.md
@@ -48,7 +48,7 @@ typedef struct
 - 实际串长度保存在数组下标=0的位置
 - `\0`表示串值的终结
 
-![串的顺序结构示意图](DataStructureMD/assets/串的顺序结构示意图.png)
+![串的顺序结构示意图](/assets/串的顺序结构示意图.png)
 
 
 
@@ -58,7 +58,7 @@ typedef struct
 
 当计算机按**字(例如1字32位)**为单位便地址时，<mark>一个存储单元可以有4个字节组成</mark>。此时顺序存储结构又有**非紧凑格式**和**紧凑格式**两种存储方式。
 
-![紧凑与非紧凑格式](DataStructureMD/assets/紧凑与非紧凑格式.jpg)
+![紧凑与非紧凑格式](/assets/紧凑与非紧凑格式.jpg)
 
 **1)非紧凑格式**
 
@@ -79,7 +79,7 @@ typedef struct
 
 以存储`S=“String Structure”` 为例，链式存储结构如图所示。
 
-![链式存储字符串例子](DataStructureMD/assets/链式存储字符串例子.jpg)
+![链式存储字符串例子](/assets/链式存储字符串例子.jpg)
 
 **优缺点：**
 
@@ -114,7 +114,7 @@ D=“White”
 
 用指针free指向堆中的未使用空间的首地址。索引表如图5-5所示
 
-![字符串堆存储索引案例](DataStructureMD/assets/字符串堆存储索引案例.jpg)
+![字符串堆存储索引案例](assets/字符串堆存储索引案例.jpg)
 
 考虑到对字符串的插入和删除操作，可能引起字符串的长度变化，在“堆”中为串值的分配空间是，可预留适当的空间。这时，索引表的索引项应增加一个域，用于存储该串在“堆”中拥有的实际存储单元的数量。当字符串长度等于该串的实际存储单元时，就不能对串进行插入操作。
 
